--- a/src/components/Textbox/Textbox.module.css
+++ b/src/components/Textbox/Textbox.module.css
@@ -1,30 +1,18 @@
-.SearchRequest {
-  color: black;
-  float: left;
-  width: 15%;
-
-  padding: 8px;
-}
-
-.inp {
-  text-align: right;
+textarea {
   appearance: none;
   border: 2px solid #bfbfbf;
   resize: none;
   width: 100%;
-  height: 30px;
-  font-family: "PT Sans", sans-serif;
-  font-weight: 700;
-  font-size: 15px;
-  padding-right: 10px;
   border-radius: 10px;
   transition: 0.2s all ease-in-out;
 }
-.inp:focus {
+
+textarea:focus {
   box-shadow: 0 2px 10px 0.2px rgb(185, 185, 185);
   border-color: black;
   outline: none;
 }
-.inp:hover {
+
+textarea:hover {
   box-shadow: 0 2px 10px 0.2px rgb(185, 185, 185);
 }
