--- a/src/components/ViewMaintenanceRequest/QuickFilter/QuickFilter.module.css
+++ b/src/components/ViewMaintenanceRequest/QuickFilter/QuickFilter.module.css
@@ -1,6 +1,6 @@
 .QuickFilter {
-    text-align: center;
-    background-color: #FFD580;
-    color: black;
-    float: right;
+  text-align: center;
+  background-color: #ffd580;
+  color: black;
+  float: right;
 }
