--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 p {
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
   margin: 0;
   padding: 0;
-
 }
